fix: change text alignment

--- a/style/style.css
+++ b/style/style.css
@@ -84,12 +84,12 @@ h2 {
 }
 
 .contact-logo img {
-margin: 0 18px 0 0;
+  margin: 0 18px 0 0;
 }
 
 .contact-logo a {
-    color: rgba(44, 42, 39, 1);
-    text-decoration: none;
+  color: rgba(44, 42, 39, 1);
+  text-decoration: none;
 }
 
 .skills {
@@ -142,6 +142,9 @@ summary {
 }
 
 .time {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 145px;
   text-align: center;
   border: 1px dashed rgba(132, 82, 42, 1);
@@ -203,7 +206,6 @@ pre {
   height: 80px;
   background-color: #2c2a27;
   color: #f3f2ed;
-  
 }
 
 .footer-container {
@@ -213,14 +215,14 @@ pre {
 }
 
 .github-link {
-    width: 160px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  width: 160px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .github-link a {
-    color: #f3f2ed;
+  color: #f3f2ed;
 }
 
 .logo-img {
